--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
+  },
+  "dependencies": {
+    "chart.js": "^3.7.1"
   }
 }
